deploy: 311f702fd6adc7ef235ddd837c37b123d7895ddd

--- a/tutorials/l_master.ipynb
+++ b/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5a17a0b5",
+   "id": "fb9d4aae",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59d73c6f",
+   "id": "38cbd744",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41735c5c",
+   "id": "80a1a924",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4573c336",
+   "id": "1b03f749",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c44a3c5",
+   "id": "0b8f7c73",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3748345f",
+   "id": "b24f33c1",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a3a0429d",
+   "id": "5db4822b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-23T17:00:00.050446Z",
-     "iopub.status.busy": "2025-01-23T17:00:00.049998Z",
-     "iopub.status.idle": "2025-01-23T17:00:04.264017Z",
-     "shell.execute_reply": "2025-01-23T17:00:04.263491Z"
+     "iopub.execute_input": "2025-01-24T11:26:49.250640Z",
+     "iopub.status.busy": "2025-01-24T11:26:49.250462Z",
+     "iopub.status.idle": "2025-01-24T11:26:53.806340Z",
+     "shell.execute_reply": "2025-01-24T11:26:53.805747Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3518caa7",
+   "id": "dfdaef06",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5704bb5",
+   "id": "2ecc3a82",
    "metadata": {},
    "source": [
     "1. a bare hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad538bc2",
+   "id": "db90e12b",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ded1031",
+   "id": "59593037",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b72aea3b",
+   "id": "2c4d6d91",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7fa19132",
+   "id": "1597c686",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70fa6929",
+   "id": "f681a4e9",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e6bffe3",
+   "id": "5121da88",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "158fbee2",
+   "id": "d3a2945e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-23T17:00:04.266378Z",
-     "iopub.status.busy": "2025-01-23T17:00:04.265933Z",
-     "iopub.status.idle": "2025-01-23T17:00:06.090297Z",
-     "shell.execute_reply": "2025-01-23T17:00:06.089781Z"
+     "iopub.execute_input": "2025-01-24T11:26:53.808544Z",
+     "iopub.status.busy": "2025-01-24T11:26:53.808256Z",
+     "iopub.status.idle": "2025-01-24T11:26:55.856577Z",
+     "shell.execute_reply": "2025-01-24T11:26:55.855989Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79f664b3",
+   "id": "e7fe6857",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "dc177341",
+   "id": "4adb205a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-23T17:00:06.092231Z",
-     "iopub.status.busy": "2025-01-23T17:00:06.091886Z",
-     "iopub.status.idle": "2025-01-23T17:00:06.095366Z",
-     "shell.execute_reply": "2025-01-23T17:00:06.094817Z"
+     "iopub.execute_input": "2025-01-24T11:26:55.858521Z",
+     "iopub.status.busy": "2025-01-24T11:26:55.858150Z",
+     "iopub.status.idle": "2025-01-24T11:26:55.861788Z",
+     "shell.execute_reply": "2025-01-24T11:26:55.861141Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09c44207",
+   "id": "eb9b8f78",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ffdd07f",
+   "id": "0ae50eca",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "998b77dd",
+   "id": "f3c409cd",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc39313f",
+   "id": "49c0d2be",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d69368ae",
+   "id": "9af63bb8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-23T17:00:06.097263Z",
-     "iopub.status.busy": "2025-01-23T17:00:06.096865Z",
-     "iopub.status.idle": "2025-01-23T17:00:06.141100Z",
-     "shell.execute_reply": "2025-01-23T17:00:06.140489Z"
+     "iopub.execute_input": "2025-01-24T11:26:55.863734Z",
+     "iopub.status.busy": "2025-01-24T11:26:55.863329Z",
+     "iopub.status.idle": "2025-01-24T11:26:55.911251Z",
+     "shell.execute_reply": "2025-01-24T11:26:55.910632Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f99fa2b0",
+   "id": "131a9481",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "94a0bbad",
+   "id": "f14380c5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-23T17:00:06.143070Z",
-     "iopub.status.busy": "2025-01-23T17:00:06.142669Z",
-     "iopub.status.idle": "2025-01-23T17:00:06.207307Z",
-     "shell.execute_reply": "2025-01-23T17:00:06.206713Z"
+     "iopub.execute_input": "2025-01-24T11:26:55.913376Z",
+     "iopub.status.busy": "2025-01-24T11:26:55.912980Z",
+     "iopub.status.idle": "2025-01-24T11:26:55.985349Z",
+     "shell.execute_reply": "2025-01-24T11:26:55.984777Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6278575",
+   "id": "63003241",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd07fc87",
+   "id": "d56a8bc5",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f044e54a",
+   "id": "36ab8812",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-23T17:00:06.209237Z",
-     "iopub.status.busy": "2025-01-23T17:00:06.209055Z",
-     "iopub.status.idle": "2025-01-23T17:00:06.237007Z",
-     "shell.execute_reply": "2025-01-23T17:00:06.236496Z"
+     "iopub.execute_input": "2025-01-24T11:26:55.987530Z",
+     "iopub.status.busy": "2025-01-24T11:26:55.987033Z",
+     "iopub.status.idle": "2025-01-24T11:26:56.019354Z",
+     "shell.execute_reply": "2025-01-24T11:26:56.018830Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6dff3ad1",
+   "id": "3cf46154",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ff58308",
+   "id": "efb8a40e",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc5f51e2",
+   "id": "ceb25994",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2fe053e5",
+   "id": "85c4d7df",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "039b8ede",
+   "id": "e8a3420a",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "bc5509d2",
+   "id": "f83cad1b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-23T17:00:06.238943Z",
-     "iopub.status.busy": "2025-01-23T17:00:06.238756Z",
-     "iopub.status.idle": "2025-01-23T17:00:06.243009Z",
-     "shell.execute_reply": "2025-01-23T17:00:06.242370Z"
+     "iopub.execute_input": "2025-01-24T11:26:56.021536Z",
+     "iopub.status.busy": "2025-01-24T11:26:56.020992Z",
+     "iopub.status.idle": "2025-01-24T11:26:56.025200Z",
+     "shell.execute_reply": "2025-01-24T11:26:56.024639Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1aca870",
+   "id": "a5f5de6f",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "895dc7d1",
+   "id": "83713f86",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-23T17:00:06.244996Z",
-     "iopub.status.busy": "2025-01-23T17:00:06.244651Z",
-     "iopub.status.idle": "2025-01-23T17:00:06.247554Z",
-     "shell.execute_reply": "2025-01-23T17:00:06.246996Z"
+     "iopub.execute_input": "2025-01-24T11:26:56.027080Z",
+     "iopub.status.busy": "2025-01-24T11:26:56.026763Z",
+     "iopub.status.idle": "2025-01-24T11:26:56.029805Z",
+     "shell.execute_reply": "2025-01-24T11:26:56.029197Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7f13f0a",
+   "id": "a78d94e7",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "f054d364",
+   "id": "8d118314",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-23T17:00:06.249316Z",
-     "iopub.status.busy": "2025-01-23T17:00:06.248986Z",
-     "iopub.status.idle": "2025-01-23T17:00:08.834164Z",
-     "shell.execute_reply": "2025-01-23T17:00:08.833606Z"
+     "iopub.execute_input": "2025-01-24T11:26:56.031661Z",
+     "iopub.status.busy": "2025-01-24T11:26:56.031311Z",
+     "iopub.status.idle": "2025-01-24T11:26:58.699992Z",
+     "shell.execute_reply": "2025-01-24T11:26:58.699414Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31af8a25",
+   "id": "3dbd9a55",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c83ae25b",
+   "id": "b00da284",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5fd7871",
+   "id": "3d929b58",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "988ea595",
+   "id": "1c56786f",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "e767136b",
+   "id": "2575d36f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-23T17:00:08.836058Z",
-     "iopub.status.busy": "2025-01-23T17:00:08.835873Z",
-     "iopub.status.idle": "2025-01-23T17:00:08.839592Z",
-     "shell.execute_reply": "2025-01-23T17:00:08.839038Z"
+     "iopub.execute_input": "2025-01-24T11:26:58.701875Z",
+     "iopub.status.busy": "2025-01-24T11:26:58.701676Z",
+     "iopub.status.idle": "2025-01-24T11:26:58.705571Z",
+     "shell.execute_reply": "2025-01-24T11:26:58.704874Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7fb194369c60>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7ff0d8061c60>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c86d28a8",
+   "id": "35e51c59",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91b70fcc",
+   "id": "de535056",
    "metadata": {},
    "source": [
     "## Postprocesses"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c03b5f14",
+   "id": "0a7011d2",
    "metadata": {},
    "source": [
     "You can define custom postprocesses. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7388329c",
+   "id": "ae29a1b1",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "45f4f604",
+   "id": "c78e886e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-23T17:00:08.841419Z",
-     "iopub.status.busy": "2025-01-23T17:00:08.841218Z",
-     "iopub.status.idle": "2025-01-23T17:00:08.844187Z",
-     "shell.execute_reply": "2025-01-23T17:00:08.843643Z"
+     "iopub.execute_input": "2025-01-24T11:26:58.707600Z",
+     "iopub.status.busy": "2025-01-24T11:26:58.707247Z",
+     "iopub.status.idle": "2025-01-24T11:26:58.710354Z",
+     "shell.execute_reply": "2025-01-24T11:26:58.709813Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "b7ad5794",
+   "id": "9935a0bb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-23T17:00:08.845838Z",
-     "iopub.status.busy": "2025-01-23T17:00:08.845664Z",
-     "iopub.status.idle": "2025-01-23T17:00:09.896531Z",
-     "shell.execute_reply": "2025-01-23T17:00:09.895893Z"
+     "iopub.execute_input": "2025-01-24T11:26:58.712115Z",
+     "iopub.status.busy": "2025-01-24T11:26:58.711723Z",
+     "iopub.status.idle": "2025-01-24T11:26:59.791683Z",
+     "shell.execute_reply": "2025-01-24T11:26:59.791099Z"
     }
    },
    "outputs": [
