--- a/tutorials/f_cutting.ipynb
+++ b/tutorials/f_cutting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6e869c0a",
+   "id": "b2f8bb4b",
    "metadata": {},
    "source": [
     "# Cutting\n"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24d36875",
+   "id": "8412eb77",
    "metadata": {},
    "source": [
     "## Cutting\n",
@@ -21,13 +21,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "31d28e74",
+   "id": "939885fb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-24T11:26:11.740968Z",
-     "iopub.status.busy": "2025-01-24T11:26:11.740787Z",
-     "iopub.status.idle": "2025-01-24T11:26:12.791547Z",
-     "shell.execute_reply": "2025-01-24T11:26:12.790940Z"
+     "iopub.execute_input": "2025-01-27T15:49:53.536775Z",
+     "iopub.status.busy": "2025-01-27T15:49:53.536591Z",
+     "iopub.status.idle": "2025-01-27T15:49:54.561355Z",
+     "shell.execute_reply": "2025-01-27T15:49:54.560838Z"
     }
    },
    "outputs": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc120afc",
+   "id": "a5235a71",
    "metadata": {},
    "source": [
     "So, the cut_flake method is automatically determined. Let's look at the 1D case"
@@ -73,13 +73,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "4fa83dc0",
+   "id": "21f01585",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-24T11:26:12.793697Z",
-     "iopub.status.busy": "2025-01-24T11:26:12.793183Z",
-     "iopub.status.idle": "2025-01-24T11:26:12.796666Z",
-     "shell.execute_reply": "2025-01-24T11:26:12.796197Z"
+     "iopub.execute_input": "2025-01-27T15:49:54.563500Z",
+     "iopub.status.busy": "2025-01-27T15:49:54.563043Z",
+     "iopub.status.idle": "2025-01-27T15:49:54.566705Z",
+     "shell.execute_reply": "2025-01-27T15:49:54.566183Z"
     }
    },
    "outputs": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "149e37b4",
+   "id": "909def2b",
    "metadata": {},
    "source": [
     "We need to specify the number of unit cells. "
@@ -126,13 +126,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "0bc9d7d0",
+   "id": "b3c2b3d9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-24T11:26:12.798584Z",
-     "iopub.status.busy": "2025-01-24T11:26:12.798199Z",
-     "iopub.status.idle": "2025-01-24T11:26:14.417855Z",
-     "shell.execute_reply": "2025-01-24T11:26:14.417341Z"
+     "iopub.execute_input": "2025-01-27T15:49:54.568618Z",
+     "iopub.status.busy": "2025-01-27T15:49:54.568269Z",
+     "iopub.status.idle": "2025-01-27T15:49:56.135693Z",
+     "shell.execute_reply": "2025-01-27T15:49:56.135082Z"
     }
    },
    "outputs": [],
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7dde9c49",
+   "id": "82923cd4",
    "metadata": {},
    "source": [
     "You may notice this is the configuration with edge states in the band gap"
@@ -151,13 +151,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "2d7a0290",
+   "id": "694361f6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-24T11:26:14.420289Z",
-     "iopub.status.busy": "2025-01-24T11:26:14.419852Z",
-     "iopub.status.idle": "2025-01-24T11:26:16.990625Z",
-     "shell.execute_reply": "2025-01-24T11:26:16.990032Z"
+     "iopub.execute_input": "2025-01-27T15:49:56.137977Z",
+     "iopub.status.busy": "2025-01-27T15:49:56.137626Z",
+     "iopub.status.idle": "2025-01-27T15:49:58.660575Z",
+     "shell.execute_reply": "2025-01-27T15:49:58.659940Z"
     }
    },
    "outputs": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44235175",
+   "id": "7c4ab6d7",
    "metadata": {},
    "source": [
     "If you don't want this, delete the edges by removing the first and the last orbital in the list"
@@ -187,13 +187,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "5c3bed94",
+   "id": "2f422eb4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-24T11:26:16.992374Z",
-     "iopub.status.busy": "2025-01-24T11:26:16.992172Z",
-     "iopub.status.idle": "2025-01-24T11:26:19.450010Z",
-     "shell.execute_reply": "2025-01-24T11:26:19.449434Z"
+     "iopub.execute_input": "2025-01-27T15:49:58.662608Z",
+     "iopub.status.busy": "2025-01-27T15:49:58.662176Z",
+     "iopub.status.idle": "2025-01-27T15:50:01.105349Z",
+     "shell.execute_reply": "2025-01-27T15:50:01.104810Z"
     }
    },
    "outputs": [
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d46be79",
+   "id": "6386162a",
    "metadata": {},
    "source": [
     "We now cover cutting in 2D."
@@ -236,13 +236,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "bfe6ccc5",
+   "id": "54ec2a3c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-24T11:26:19.452075Z",
-     "iopub.status.busy": "2025-01-24T11:26:19.451703Z",
-     "iopub.status.idle": "2025-01-24T11:26:19.455182Z",
-     "shell.execute_reply": "2025-01-24T11:26:19.454585Z"
+     "iopub.execute_input": "2025-01-27T15:50:01.107222Z",
+     "iopub.status.busy": "2025-01-27T15:50:01.106906Z",
+     "iopub.status.idle": "2025-01-27T15:50:01.110680Z",
+     "shell.execute_reply": "2025-01-27T15:50:01.110198Z"
     }
    },
    "outputs": [
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "186935d7",
+   "id": "f57abf3d",
    "metadata": {},
    "source": [
     "This is more complex. We can give an arbitrary polygon to the cutting function, so let's do this by approximating a potato."
@@ -290,13 +290,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "7d7f16a6",
+   "id": "cfac0e0e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-24T11:26:19.457259Z",
-     "iopub.status.busy": "2025-01-24T11:26:19.456780Z",
-     "iopub.status.idle": "2025-01-24T11:26:19.483014Z",
-     "shell.execute_reply": "2025-01-24T11:26:19.482538Z"
+     "iopub.execute_input": "2025-01-27T15:50:01.112595Z",
+     "iopub.status.busy": "2025-01-27T15:50:01.112159Z",
+     "iopub.status.idle": "2025-01-27T15:50:01.138565Z",
+     "shell.execute_reply": "2025-01-27T15:50:01.138068Z"
     }
    },
    "outputs": [],
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b56340e",
+   "id": "6c4f5191",
    "metadata": {},
    "source": [
     "Now, we cut a flake"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "ead5e7e7",
+   "id": "d691a41d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-24T11:26:19.485347Z",
-     "iopub.status.busy": "2025-01-24T11:26:19.484896Z",
-     "iopub.status.idle": "2025-01-24T11:26:23.446364Z",
-     "shell.execute_reply": "2025-01-24T11:26:23.445792Z"
+     "iopub.execute_input": "2025-01-27T15:50:01.140760Z",
+     "iopub.status.busy": "2025-01-27T15:50:01.140399Z",
+     "iopub.status.idle": "2025-01-27T15:50:05.080648Z",
+     "shell.execute_reply": "2025-01-27T15:50:05.079995Z"
     }
    },
    "outputs": [
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "593ffe3f",
+   "id": "e5e03d28",
    "metadata": {},
    "source": [
     "\n",
@@ -366,13 +366,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "78c74193",
+   "id": "cbe4d5eb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-24T11:26:23.448965Z",
-     "iopub.status.busy": "2025-01-24T11:26:23.448549Z",
-     "iopub.status.idle": "2025-01-24T11:26:23.452563Z",
-     "shell.execute_reply": "2025-01-24T11:26:23.451912Z"
+     "iopub.execute_input": "2025-01-27T15:50:05.083198Z",
+     "iopub.status.busy": "2025-01-27T15:50:05.082807Z",
+     "iopub.status.idle": "2025-01-27T15:50:05.086631Z",
+     "shell.execute_reply": "2025-01-27T15:50:05.086151Z"
     }
    },
    "outputs": [
@@ -412,7 +412,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58eb9efc",
+   "id": "3d0e7ad4",
+   "metadata": {},
+   "source": [
+    "Note: The \"extent\" of the shape refers to its minimum dimensions. For instance, when working with graphene, which has a bond length of approximately 1.42 Å, you should specify dimensions that avoid cutting into very small fragments, such as a single benzene ring (~2.46 Å in diameter). For meaningful simulations, ensure that the shape dimensions exceeds this scale."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "18bfc1ae",
    "metadata": {},
    "source": [
     "## Bearded configurations"
@@ -420,7 +428,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0972100",
+   "id": "c870e2e6",
    "metadata": {},
    "source": [
     "Cutting removes \"dangling\" atoms by default. Dangling atoms are defined by their neighbor number: if they have only one neighbor, they are removed. If you want to deactivate this to keep \"bearded\" configurations, do"
@@ -429,13 +437,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "0140ab5c",
+   "id": "a64022b0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-24T11:26:23.454644Z",
-     "iopub.status.busy": "2025-01-24T11:26:23.454261Z",
-     "iopub.status.idle": "2025-01-24T11:26:25.206382Z",
-     "shell.execute_reply": "2025-01-24T11:26:25.205858Z"
+     "iopub.execute_input": "2025-01-27T15:50:05.088579Z",
+     "iopub.status.busy": "2025-01-27T15:50:05.088235Z",
+     "iopub.status.idle": "2025-01-27T15:50:06.802070Z",
+     "shell.execute_reply": "2025-01-27T15:50:06.801544Z"
     }
    },
    "outputs": [
