--- a/tutorials/j_defining_materials.ipynb
+++ b/tutorials/j_defining_materials.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f58d610e",
+   "id": "8aa524fc",
    "metadata": {},
    "source": [
     "# Defining Materials\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0fd2193f",
+   "id": "741327b7",
    "metadata": {},
    "source": [
     "## Defining a custom material\n",
@@ -23,13 +23,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6e98df9c",
+   "id": "5956ca69",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-24T11:27:03.273974Z",
-     "iopub.status.busy": "2025-01-24T11:27:03.273792Z",
-     "iopub.status.idle": "2025-01-24T11:27:04.308893Z",
-     "shell.execute_reply": "2025-01-24T11:27:04.308268Z"
+     "iopub.execute_input": "2025-01-27T15:50:43.781333Z",
+     "iopub.status.busy": "2025-01-27T15:50:43.781140Z",
+     "iopub.status.idle": "2025-01-27T15:50:44.820604Z",
+     "shell.execute_reply": "2025-01-27T15:50:44.819981Z"
     }
    },
    "outputs": [
@@ -97,22 +97,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48e142ea",
+   "id": "01508065",
    "metadata": {},
    "source": [
-    "So, the Material class essentially defines a small language we can use to specify a material. The Hubbard model would look like this"
+    "So, the Material class essentially defines a small language we can use to specify a material. A preliminary, work-in-progress version of the Hubbard model would look like this"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "6471adaf",
+   "id": "f172698e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-24T11:27:04.311011Z",
-     "iopub.status.busy": "2025-01-24T11:27:04.310577Z",
-     "iopub.status.idle": "2025-01-24T11:27:04.344241Z",
-     "shell.execute_reply": "2025-01-24T11:27:04.343714Z"
+     "iopub.execute_input": "2025-01-27T15:50:44.822840Z",
+     "iopub.status.busy": "2025-01-27T15:50:44.822419Z",
+     "iopub.status.idle": "2025-01-27T15:50:44.856289Z",
+     "shell.execute_reply": "2025-01-27T15:50:44.855738Z"
     }
    },
    "outputs": [],
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f941548",
+   "id": "c2fa004e",
    "metadata": {},
    "source": [
     "To see how cutting finite flakes from this 3D material works, let's inspect"
@@ -160,13 +160,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8efb42e7",
+   "id": "efabead8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-24T11:27:04.346209Z",
-     "iopub.status.busy": "2025-01-24T11:27:04.346018Z",
-     "iopub.status.idle": "2025-01-24T11:27:04.349818Z",
-     "shell.execute_reply": "2025-01-24T11:27:04.349208Z"
+     "iopub.execute_input": "2025-01-27T15:50:44.858521Z",
+     "iopub.status.busy": "2025-01-27T15:50:44.858138Z",
+     "iopub.status.idle": "2025-01-27T15:50:44.862119Z",
+     "shell.execute_reply": "2025-01-27T15:50:44.861518Z"
     }
    },
    "outputs": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "282be171",
+   "id": "4ec8566b",
    "metadata": {},
    "source": [
     "So, the cut_flake method is automatically determined. We have specified a 3D material, so let's look at the function that is applied"
@@ -210,13 +210,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "9436f65b",
+   "id": "a49661c4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-24T11:27:04.351537Z",
-     "iopub.status.busy": "2025-01-24T11:27:04.351360Z",
-     "iopub.status.idle": "2025-01-24T11:27:04.354860Z",
-     "shell.execute_reply": "2025-01-24T11:27:04.354307Z"
+     "iopub.execute_input": "2025-01-27T15:50:44.864126Z",
+     "iopub.status.busy": "2025-01-27T15:50:44.863740Z",
+     "iopub.status.idle": "2025-01-27T15:50:44.867110Z",
+     "shell.execute_reply": "2025-01-27T15:50:44.866621Z"
     }
    },
    "outputs": [
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "edabd2a0",
+   "id": "65acc0e4",
    "metadata": {},
    "source": [
     "Let's see this in action"
@@ -266,13 +266,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "b64205e6",
+   "id": "3aecae03",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-24T11:27:04.356750Z",
-     "iopub.status.busy": "2025-01-24T11:27:04.356351Z",
-     "iopub.status.idle": "2025-01-24T11:27:06.107041Z",
-     "shell.execute_reply": "2025-01-24T11:27:06.106395Z"
+     "iopub.execute_input": "2025-01-27T15:50:44.868906Z",
+     "iopub.status.busy": "2025-01-27T15:50:44.868626Z",
+     "iopub.status.idle": "2025-01-27T15:50:46.615247Z",
+     "shell.execute_reply": "2025-01-27T15:50:46.614357Z"
     }
    },
    "outputs": [
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "334858df",
+   "id": "4eea5dc1",
    "metadata": {},
    "source": [
     "## Direction-dependent couplings"
@@ -309,26 +309,26 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53ee8972",
+   "id": "573e6acb",
    "metadata": {},
    "source": [
     "Up to now, we have only considered couplings dependent on the scalar distance between two orbitals.\n",
     "They can also be given as direction-dependent functions, like in Slater-Koster orbitals.\n",
     "To this end, replace the neighbor coupling list by another list, where each entry specifies the coupling\n",
     "as [d_x, d_y, d_z, coupling], where d_i are the distance vector components.\n",
-    "The example below illustrates this for the Haldane model of graphene."
+    "The example below illustrates this for a preliminary, work-in-progress version of the Haldane model of graphene."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "edf5df6a",
+   "id": "bc6531e6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-24T11:27:06.109886Z",
-     "iopub.status.busy": "2025-01-24T11:27:06.109405Z",
-     "iopub.status.idle": "2025-01-24T11:27:06.232526Z",
-     "shell.execute_reply": "2025-01-24T11:27:06.231925Z"
+     "iopub.execute_input": "2025-01-27T15:50:46.617959Z",
+     "iopub.status.busy": "2025-01-27T15:50:46.617694Z",
+     "iopub.status.idle": "2025-01-27T15:50:46.739791Z",
+     "shell.execute_reply": "2025-01-27T15:50:46.739298Z"
     }
    },
    "outputs": [],
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8faec359",
+   "id": "1fa6525d",
    "metadata": {},
    "source": [
     "We now display the edge state"
@@ -409,13 +409,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "b8b83d2a",
+   "id": "e8bce10f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-24T11:27:06.234710Z",
-     "iopub.status.busy": "2025-01-24T11:27:06.234502Z",
-     "iopub.status.idle": "2025-01-24T11:27:16.301691Z",
-     "shell.execute_reply": "2025-01-24T11:27:16.301051Z"
+     "iopub.execute_input": "2025-01-27T15:50:46.742039Z",
+     "iopub.status.busy": "2025-01-27T15:50:46.741626Z",
+     "iopub.status.idle": "2025-01-27T15:50:56.555395Z",
+     "shell.execute_reply": "2025-01-27T15:50:56.554784Z"
     },
     "lines_to_next_cell": 2
    },
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3691fbf6",
+   "id": "350b0918",
    "metadata": {},
    "source": [
     "## Modifying existing materials"
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2c1eb39",
+   "id": "b5aeb6d4",
    "metadata": {},
    "source": [
     "You can copy the material you want to modify and change/override its attributes.\n",
@@ -458,13 +458,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "32df835d",
+   "id": "80a7f608",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-24T11:27:16.304089Z",
-     "iopub.status.busy": "2025-01-24T11:27:16.303503Z",
-     "iopub.status.idle": "2025-01-24T11:27:16.320115Z",
-     "shell.execute_reply": "2025-01-24T11:27:16.319586Z"
+     "iopub.execute_input": "2025-01-27T15:50:56.557358Z",
+     "iopub.status.busy": "2025-01-27T15:50:56.556984Z",
+     "iopub.status.idle": "2025-01-27T15:50:56.572748Z",
+     "shell.execute_reply": "2025-01-27T15:50:56.572248Z"
     }
    },
    "outputs": [
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "871ef51d",
+   "id": "a4c1ed3e",
    "metadata": {},
    "source": [
     "## Handling non-periodic dimensions"
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca29ecd0",
+   "id": "1d957afb",
    "metadata": {},
    "source": [
     "Say you want to have a custom ssh chain with 2 atoms in the unit cell, but displace one of the atoms in y-direction. You do this by including a second basis vector in y-direction and give the atom you want to displace a non-vanishing y-coordinate. To not get a 2D lattice, you have to specify explicitly which direction(s) you want to be periodically repeated."
@@ -528,13 +528,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "829a82b0",
+   "id": "4885c104",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-24T11:27:16.322182Z",
-     "iopub.status.busy": "2025-01-24T11:27:16.321823Z",
-     "iopub.status.idle": "2025-01-24T11:27:19.739459Z",
-     "shell.execute_reply": "2025-01-24T11:27:19.738819Z"
+     "iopub.execute_input": "2025-01-27T15:50:56.574510Z",
+     "iopub.status.busy": "2025-01-27T15:50:56.574326Z",
+     "iopub.status.idle": "2025-01-27T15:50:59.805434Z",
+     "shell.execute_reply": "2025-01-27T15:50:59.804908Z"
     },
     "lines_to_next_cell": 0
    },
@@ -592,7 +592,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30b2e51d",
+   "id": "2d3b0a3d",
    "metadata": {
     "lines_to_next_cell": 2
    },
